# Copyright 2018-2024 the Deno authors. All rights reserved. MIT license.

[package]
name = "deno_fake_http"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
description = "fake HTTP server implementation for Deno"

[features]
"__http_tracing" = []

[lib]
path = "lib.rs"

[[bench]]
name = "compressible"
harness = false

[dependencies]
async-compression = { version = "0.4", features = ["tokio", "brotli", "gzip"] }
async-trait.workspace = true
base64.workspace = true
brotli.workspace = true
bytes.workspace = true
cache_control.workspace = true
deno_core.workspace = true
flate2.workspace = true
http.workspace = true
http_v02.workspace = true
httparse.workspace = true
hyper.workspace = true
hyper-util.workspace = true
hyper_v014 = { workspace = true, features = ["server", "stream", "http1", "http2", "runtime"] }
itertools = "0.10"
memmem.workspace = true
mime = "0.3.16"
once_cell.workspace = true
percent-encoding.workspace = true
phf.workspace = true
pin-project.workspace = true
ring.workspace = true
scopeguard.workspace = true
serde.workspace = true
smallvec.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util = { workspace = true, features = ["io"] }
async-channel = "2.3.1"

[dev-dependencies]
bencher.workspace = true
http-body-util.workspace = true
rand.workspace = true
