[package]
name = "deno_ipcs"
version = "0.3.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "ipcs implementation for Deno"


[lib]
path = "lib.rs"

[dependencies]
deno_core.workspace = true
pin-project.workspace = true

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util = { workspace = true, features = ["io"] }
async-channel = "2.3.1"
uuid.workspace = true


